working on html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    
+    <div>
+        <div class="container">
+            <div>
+                <h1 class="text-white">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+            </div>
+            <div class="row">
+                <div>Nome Cognome</div>
+                <input type="text" name="" id="name">
+            </div>
+            <div class="row">
+                <div>Km da percorrere</div>
+                <input type="text" name="" id="km">
+            </div>
+            <div class="row">
+                <div>Fascia d'età</div>
+                <select name="Scelta" id="age">
+                    <option value="opt1">Minorenne</option>
+                    <option value="opt2">Maggiorenne</option>
+                    <option value="opt3">Senior</option>
+                </select>
+            </div>
+        </div>
+    </div>
+
     <script src="./assets/main.js"></script>
 </body>
 </html>
