--- a/index.html
+++ b/index.html
@@ -4,33 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biglietto Treno Form</title>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- css -->
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    <div>
-        <div class="container">
+    <div class="container">
+        <div class="row">
             <div>
-                <h1 class="text-white">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+                <!-- titolo principale -->
+                <h1 class="mb-5 mt-5 text-center">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
             </div>
-            <div class="row">
-                <div>Nome Cognome</div>
-                <input type="text" name="" id="name">
+
+            <!-- creazione form -->
+            <form id="ticket-form" class="card p-4 rounded-3">
+
+            <!-- inserire nome e cognome -->
+            <div class="col text-center">
+                <div class="mb-3">Nome Cognome</div>
+                <input type="text" class="form-control text-center" name="fullname" id="fullname" aria-describedby="helpId" placeholder="Mario Rossi" required>
+                <small id="helpId" class="form-text text-muted">Scrivi il tuo nome completo</small>
             </div>
-            <div class="row">
-                <div>Km da percorrere</div>
-                <input type="text" name="" id="km">
+            <!-- inserire chilometri -->
+            <div class="col text-center">
+                <div class="mb-3">Km da percorrere</div>
+                <input type="text" class="form-control text-center" name="km" id="km" aria-describedby="helpId" placeholder="100" required>
+                <small id="helpId" class="form-text text-muted">Scrivi i chilometri da percorrere</small>
             </div>
-            <div class="row">
-                <div>Fascia d'età</div>
-                <select name="Scelta" id="age">
-                    <option value="opt1">Minorenne</option>
-                    <option value="opt2">Maggiorenne</option>
-                    <option value="opt3">Senior</option>
+            <!-- inserire età -->
+            <div class="col text-center">
+                <div class="mb-3">Fascia d'età</div>
+                <select name="age-range" id="age-range" class="form-control text-center" required>
+                    <option value="minor">Minorenne</option>
+                    <option value="adult">Maggiorenne</option>
+                    <option value="senior">Senior</option>
                 </select>
+                <small id="helpId" class="form-text text-muted">Seleziona la tua fascia d'età</small>
             </div>
         </div>
+        <div class="row">
+            <!-- pulsanti -->
+            <div class="col d-flex justify-content-center">
+                <button type="submit" class="btn btn-dark mt-5 m-2">Genera</button>
+                <button type="reset" class="btn btn-outline-dark mt-5 m-2">Reset</button>
+            </div>
+        </div>
+
+        <!-- end-form -->
+        </form>
+
     </div>
 
+    <!-- javascript -->
     <script src="./assets/main.js"></script>
 </body>
 </html>
